gccida/g2/expand_builtin_apply
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1645:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1658:4: error: expected ';' after expression
rtx old_stack_level; // [rsp+10h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1658:5: error: use of undeclared identifier 'old_stack_level'
rtx old_stack_level; // [rsp+10h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1659:4: error: expected ';' after expression
rtx call_fusage[8]; // [rsp+18h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1659:5: error: use of undeclared identifier 'call_fusage'
rtx call_fusage[8]; // [rsp+18h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1661:1: error: use of undeclared identifier 'old_stack_level'
old_stack_level = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1662:1: error: use of undeclared identifier 'call_fusage'
call_fusage[0] = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1665:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1666:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), arguments); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1671:31: error: use of undeclared identifier 'old_stack_level'
emit_stack_save( SAVE_BLOCK, &old_stack_level, 0LL); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1695:29: error: use of undeclared identifier 'machine_mode'
v15 = get_mode_alignment( ( machine_mode)v14) >> 3; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1699:22: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_REG( ( machine_mode)v14, v16); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1700:32: error: use of undeclared identifier 'machine_mode'
v18 = adjust_address_1( v11, ( machine_mode)v14, v12, 1, 1); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1702:10: error: use of undeclared identifier 'call_fusage'
use_reg( call_fusage, v17); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1722:32: error: use of undeclared identifier 'machine_mode'
v22 = adjust_address_1( v11, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v19, 1, 1); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1726:10: error: use of undeclared identifier 'call_fusage'
use_reg( call_fusage, struct_value_rtx); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1729:44: error: use of undeclared identifier 'call_fusage'
v24 = prepare_call_address( function, 0LL, call_fusage, 0, 0); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1746:19: error: expected ';' after expression
last_insn = ( rtx)last_insn[1]; 
                  ^
                  ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/builtins.c:1750:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v30 = ( __int64)last_insn[4]; 
                ^~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_apply/src/obj/builtins.o] Error 1
